# pushup-tracker

./: .gitignore  README.md  pyproject.toml
Docs/: pushup-tracker-project-plan.md
configs/: quality_thresholds.yaml
notebooks/: 03_benchmark_analysis.ipynb  04_feature_engineering.ipynb  05_rep_counting_baseline.ipynb  06_form_classification.ipynb  06_rep_counting_lstm.ipynb  07_quality_assessment.ipynb  08_final_evaluation.ipynb
r3d_study/: .gitignore  R3D_STUDY.md  README.md  VAST_AI_GUIDE.md  __init__.py  annotate_helper.py  annotations_template.csv  data_loader.py  datasets.py  inference.py  live_demo.py  model.py  notebook.ipynb  requirements.txt  state_machine.py  test_r3d_study.py  training.py
src/benchmark/: extract_keypoints.py  runner.py
src/classification/: datasets.py  form_checker.py  rep_segmenter.py  stgcn.py  train_classifier.py  video_classifier.py
src/counting/: dataset.py  lstm_counter.py  state_machine.py  train.py
src/demo/: __main__.py  live.py
src/features/: angles.py  normalize.py  temporal.py
src/pose_estimation/: __init__.py  base.py  keypoint_schema.py  mediapipe_estimator.py  movenet_estimator.py  visualization.py  yolo_estimator.py
src/quality/: feedback.py  scoring.py
stgcn_study/: .gitignore  data_loader.py  datasets.py  inference.py  live_demo.py  model.py  notebook.ipynb  requirements.txt  state_machine.py  training.py
tests/: test_angles.py  test_classification.py  test_keypoint_schema.py  test_scoring.py  test_state_machine.py
