[project]
name = "pushup-tracker"
version = "0.2.0"
description = "Push-up form analysis and repetition counting using multi-model pose estimation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.9",
    "mediapipe>=0.10.0",
    "onnxruntime>=1.17.0",
    "requests>=2.31.0",
    "einops>=0.8.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kaggle>=1.8.3",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
